agrego mod. responsive, etiqueta iframe, navbar active link

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -29,7 +29,7 @@
                 <div class="mx-auto"></div>
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">HOME</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">HOME</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="./shawn.html">SHAWN</a>
@@ -66,22 +66,10 @@
         <div class="musicVideos"> 
             <div class="videos-row">
                 <h1>music videos</h1>
-                <video width="560" height="315" controls>
-                    <source src="../assets/Videos/introWonder.mp4" type="video/mp4">
-                     Your browser does not support the video tag.
-                </video> 
-                <video width="560" height="315" controls>
-                    <source src="../assets/Videos/monster.mp4" type="video/mp4">
-                     Your browser does not support the video tag.
-                </video>
-                <video width="560" height="315" controls>
-                    <source src="../assets/Videos/inMyBlood.mp4" type="video/mp4">
-                     Your browser does not support the video tag.
-                </video>
-                <video width="560" height="315" controls>
-                    <source src="../assets/Videos/mercy.mp4" type="video/mp4">
-                     Your browser does not support the video tag.
-                </video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/h_gA2e1OKeo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/MPbUaIZAaeA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/36tggrpRoTI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/KkGVmN68ByU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div> 
         </div>
     </section>
