--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="mx-auto"></div>
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
+                    <a class="nav-link" aria-current="page" href="./index.html">HOME</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./html/shawn.html">SHAWN</a>
@@ -51,10 +51,7 @@
     </header>
     <section class="content"> 
       <div class="wonderVideo">
-          <video width="530" height="315" controls> 
-              <source src="./assets/videos/wonder.mp4" type="video/mp4">
-               Your browser does not support the video tag.
-            </video>    
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/fHeQemJJQII" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
       </div>
       <h1 class="wonderOutNow">WONDER OUT NOW</h1>
       <p>the lastest album of shawn</p>
