--- a/html/music.html
+++ b/html/music.html
@@ -29,7 +29,7 @@
                 <div class="mx-auto"></div>
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">HOME</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">HOME</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="./shawn.html">SHAWN</a>
