update title music of shawn> Music of Shawn

--- a/html/music.html
+++ b/html/music.html
@@ -49,7 +49,7 @@
         </nav>
     </header>
     <section id="title">
-        <h1>music of shawn</h1>
+        <h1>Music of Shawn</h1>
     </section>
     <section id="musicSection"> 
         <div id="carouselExampleFade" class="carousel slide carousel-fade p-4" data-bs-ride="carousel">
