update h1 photos>Photos and music videos>Music Videos

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -51,7 +51,7 @@
     <section id="gallery"> 
         <div class="images">
             <div class="images-row">
-                <h1>photos</h1>
+                <h1>Photos</h1>
                 <img class="gridPhotoOne" src="../assets/images/gridPhotoOne.jpg" longdesc="shawn in black and white">
                 <img class="gridPhotoTwo" src="../assets/images/gridPhotoTwo.jpg" alt="shawn stand">
                 <img class="gridPhotoThree" src="../assets/images/gridPhotoThree.jpg" alt="shawn smiling">
@@ -65,7 +65,7 @@
     <section id="videos"> 
         <div class="musicVideos"> 
             <div class="videos-row">
-                <h1>music videos</h1>
+                <h1>Music Videos</h1>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/h_gA2e1OKeo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/MPbUaIZAaeA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/36tggrpRoTI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
